--- a/src/components/hosts/HostsTable.css
+++ b/src/components/hosts/HostsTable.css
@@ -3,6 +3,10 @@
 }
 
 .hosts-table .pf-c-dropdown__toggle-text {
-    color: var(--pf-global--Color--100) !important;
+  color: var(--pf-global--Color--100) !important;
+}
+
+.hosts-table button {
+  font-size: var(--pf-c-table-cell--FontSize);
 }
 
