--- a/src/components/hosts/HostsTable.css
+++ b/src/components/hosts/HostsTable.css
@@ -10,3 +10,6 @@
   font-size: var(--pf-c-table-cell--FontSize);
 }
 
+.hosts-table {
+  height: 1rem; /* Workaround for: https://bugzilla.redhat.com/show_bug.cgi?id=1879378 in FF; The actual table height will be recalculated accordingly. */
+}
