--- a/src/components/hosts/HostsTable.css
+++ b/src/components/hosts/HostsTable.css
@@ -13,3 +13,7 @@
 .hosts-table {
   height: 1rem; /* Workaround for: https://bugzilla.redhat.com/show_bug.cgi?id=1879378 in FF; The actual table height will be recalculated accordingly. */
 }
+
+.hosts-table-sublabel {
+  color: var(--pf-global--palette--black-600);
+}
