Host status alerts can be extended for user actions
The first user action is the hostname change in case
of 'hostname-unique' or 'hostname-valid' host state.

--- a/src/components/hosts/HostValidationGroups.css
+++ b/src/components/hosts/HostValidationGroups.css
@@ -2,3 +2,7 @@
   margin-top: var(--pf-global--spacer--md) !important;
   margin-bottom: var(--pf-global--spacer--sm) !important;
 }
+
+.host-validation-groups__validation_action {
+  float: right;
+}
