--- a/src/components/ui/AlertsSection/AlertsSection.css
+++ b/src/components/ui/AlertsSection/AlertsSection.css
@@ -1,6 +1,6 @@
 .pf-c-alert-group.alerts-section {
   position: absolute;
-  padding: var(--pf-c-page__main-section--PaddingTop);
+  padding: var(--pf-global--spacer--lg);
   bottom: 0;
   width: 100%;
 }
