Changes after repository ownership transfer
Former upstream location:
  https://github.com/marek-libra/facet-lib

New location:
  https://github.com/openshift-assisted/assisted-ui-lib

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
 /* pf-u-float-right does not work in all flows */
-.facet-lib-float-right {
+.assisted-ui-float-right {
   float: right !important;
 }
