--- a/src/styles.css
+++ b/src/styles.css
@@ -10,3 +10,8 @@
 .margin-left-md {
   margin-left: var(--pf-global--spacer--md);
 }
+
+.assisted-ui-vertical-margin {
+  margin-top: var(--pf-global--spacer--lg);
+  margin-bottom: var(--pf-global--spacer--lg);
+}
