MGMT-3235: Move Network config into a wizard step

--- a/src/components/clusters/ClusterToolbar.css
+++ b/src/components/clusters/ClusterToolbar.css
@@ -4,6 +4,8 @@
 .cluster-toolbar__content {
   padding: 0 !important;
 }
+
+/* TODO(mlibra): Remove, no more needed */
 .cluster-toolbar-ocm {
   margin-right: 50px; /* fixed size of "a bulb" in OCM */
 }
