MGMT-4200 Fix misplaced wizard toolbar alerts

--- a/src/components/clusterWizard/ClusterWizardStep.css
+++ b/src/components/clusterWizard/ClusterWizardStep.css
@@ -5,3 +5,7 @@
 .wizard-nav-item-warning-icon {
   margin-left: var(--pf-global--spacer--sm);
 }
+
+.cluster-wizard-step__footer {
+  display: block;
+}
