Fix the operator popover styling

--- a/src/components/clusterDetail/OperatorsProgressItem.css
+++ b/src/components/clusterDetail/OperatorsProgressItem.css
@@ -1,4 +1,4 @@
 .operators-progress-item__operators-list {
-  padding-left: 0;
+  padding-left: 0 !important;
   list-style-type: none !important;
 }
