CSS rules so that opening menu doesn't introduce a scrollbar

--- a/src/common/components/clusterWizard/ClusterWizardStep.css
+++ b/src/common/components/clusterWizard/ClusterWizardStep.css
@@ -8,4 +8,11 @@
 
 .cluster-wizard-step__footer {
   display: block !important;
+  z-index: 90 !important;
+}
+
+@media (min-width: 768px) {
+  .cluster-wizard-step .pf-c-wizard__main {
+    overflow: inherit !important;
+  }
 }
