--- a/src/common/components/ui/ClusterEventsToolbar.css
+++ b/src/common/components/ui/ClusterEventsToolbar.css
@@ -1,8 +1,4 @@
-#checkbox-deselect-all-hosts-action {
-  visibility: hidden;
-}
-
-#clusters-events-toolbar {
+.clusters-events-toolbar {
   position: fixed;
   background: var(--pf-global--palette--white);
   z-index: var(--pf-global--ZIndex--sm);
