Mark Hosts tab with Exclamation mark
and remove specific Agent alert from the InfraEnv page.

--- a/src/cim/components/InfraEnv/infra-env.css
+++ b/src/cim/components/InfraEnv/infra-env.css
@@ -2,3 +2,6 @@
   padding-right: var(--pf-c-wizard__main-body--PaddingRight)
 }
 
+.infra-env-hosts-tab-title__icon {
+  margin-left: var(--pf-global--spacer--xs)
+}
