--- a/src/common/components/ui/DetailList.css
+++ b/src/common/components/ui/DetailList.css
@@ -5,3 +5,7 @@
 .detail-list dd {
   margin-bottom: var(--pf-global--spacer--sm);
 }
+
+.detail-list ul ul, .detail-list ul li {
+  margin-top: var(--pf-c-content--dt--sm--MarginTop);
+}
