--- a/src/cim/components/common/ResourceAlerts.css
+++ b/src/cim/components/common/ResourceAlerts.css
@@ -2,7 +2,7 @@
   margin-bottom: var(--pf-global--spacer--sm);
 }
 
-.cim-resource-alerts ul {
+.cim-resource-alerts--noul ul {
   list-style: none;
   padding-left: 0;
   margin-left: 0;
